Changes name to be case insensitive.